Fix info.yml minimal for recognition

--- a/web/themes/custom/mytheme/mytheme.info.yml
+++ b/web/themes/custom/mytheme/mytheme.info.yml
@@ -1,12 +1,7 @@
 name: Custom Theme1
 type: theme
-description: 'A custom child theme based on Stark'
+description: 'My custom theme'
 core_version_requirement: ^11
 base theme: stark
 libraries:
   - mytheme/global-styling
-regions:
-  header: Header
-  content: Content
-  sidebar: Sidebar
-  footer: Footer
