--- a/web/themes/custom/mytheme/mytheme.info.yml
+++ b/web/themes/custom/mytheme/mytheme.info.yml
@@ -4,3 +4,11 @@ description: 'Reset test theme'
 package: Custom
 core_version_requirement: ^11
 base theme: stark
+libraries:
+  - mytheme/global-styling
+
+regions:
+  header: 'Header'
+  content: 'Content'
+  sidebar: 'Sidebar'
+  footer: 'Footer'
