Manually render contact form in block using hook_preprocess_block

--- a/web/themes/custom/mytheme/mytheme.info.yml
+++ b/web/themes/custom/mytheme/mytheme.info.yml
@@ -8,6 +8,10 @@ base theme: stark
 libraries:
   - mytheme/global-styling
 
+includes:
+  - mytheme.theme
+
+
 regions:
   header: 'Header'
   content: 'Content'
