--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "drupal/core-recommended": "^11",
         "pantheon-systems/drupal-integrations": "^11",
         "cweagans/composer-patches": "^1.7",
-        "drush/drush": "^13.6"
+        "drush/drush": "^13.6",
+        "drupal/contact_storage": "^1.4"
     },
     "require-dev": {
         "drupal/core-dev": "^11"
