--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "pantheon-systems/drupal-integrations": "^11",
         "cweagans/composer-patches": "^1.7",
         "drush/drush": "^13.6",
-        "drupal/contact_storage": "^1.4"
+        "drupal/contact_storage": "^1.4",
+        "drupal/twig_tweak": "^3.4"
     },
     "require-dev": {
         "drupal/core-dev": "^11"
