--- a/web/themes/custom/mytheme/mytheme.info.yml
+++ b/web/themes/custom/mytheme/mytheme.info.yml
@@ -11,6 +11,7 @@ libraries:
 
 regions:
   header: 'Header'
+  language_switcher: 'Language Switcher'
   content: 'Content'
   sidebar: 'Sidebar'
   footer: 'Footer'
